Fix EntityModel warnings

REVIEW: 105579
BUG: 303336